--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'org.codehaus.groovy:groovy-all:3.0.3'
     implementation 'org.projectlombok:lombok:1.18.12'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
+    implementation 'org.apache.commons:commons-collections4:4.4'
 
     implementation "org.springframework:spring-core:$springVersion"
     implementation "org.springframework:spring-webmvc:$springVersion"
@@ -43,6 +44,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
 
     testImplementation 'org.spockframework:spock-core:2.0-M2-groovy-3.0'
+    testImplementation 'net.bytebuddy:byte-buddy:1.10.13'
 }
 
 test {
