--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,13 @@ plugins {
     id 'groovy'
     id 'org.springframework.boot' version "$springBootVersion"
 //    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'io.freefair.aspectj.post-compile-weaving' version '5.3.0'
     id 'project-report'  // htmlDependencyReport
+}
+
+// https://docs.freefair.io/gradle-plugins/current/reference/#_aspectj_plugins
+aspectj {
+    version = "1.9.6"
 }
 
 group 'com.playground'
@@ -32,7 +38,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:3.0.4'
+    implementation 'org.codehaus.groovy:groovy-all:3.0.6'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
     implementation 'org.apache.commons:commons-collections4:4.4'
 
@@ -45,8 +51,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
-    testImplementation 'org.spockframework:spock-core:2.0-M3-groovy-3.0'
-    testImplementation 'net.bytebuddy:byte-buddy:1.10.14'
+    testImplementation 'org.spockframework:spock-core:2.0-M4-groovy-3.0'
 }
 
 test {
