--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+management.endpoints.web.exposure.include=*
+management.info.git.mode=full
+
 spring.groovy.template.check-template-location=false
 message="Hello from application properties!"
 #foo=true
