--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+import java.time.LocalDateTime
+import java.time.format.DateTimeFormatter
+
 buildscript {
     repositories {
         mavenCentral()
@@ -13,6 +16,17 @@ plugins {
 //    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'io.freefair.aspectj.post-compile-weaving' version '5.3.0'
     id 'project-report'  // htmlDependencyReport
+    id 'com.gorylenko.gradle-git-properties' version '2.2.4'
+}
+
+// For actuator/info
+gitProperties {
+    dateFormat = 'yyyy-MM-dd h:mm a'
+    keys = ['git.branch', 'git.build.version', 'git.commit.id', 'git.commit.time']
+    customProperty 'git.commit.count', { it.repository.jgit.log().call().size() }  // https://github.com/n0mer/gradle-git-properties/blob/master/src/main/groovy/com/gorylenko/properties/CacheSupport.groovy#L30
+    customProperty 'git.build.artifact', { project.tasks.findByName('bootJar').getBaseName() }
+    customProperty 'git.build.java-version', { System.getProperty('java.version') }
+    customProperty 'git.build.time', { DateTimeFormatter.ofPattern(dateFormat).format(LocalDateTime.now()) }
 }
 
 // https://docs.freefair.io/gradle-plugins/current/reference/#_aspectj_plugins
@@ -51,6 +65,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
+    implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-devtools:$springBootVersion"
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
