--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,8 @@ plugins {
     id 'groovy'
     id 'org.springframework.boot' version "$springBootVersion"
 //    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'io.freefair.aspectj.post-compile-weaving' version '5.3.0'
     id 'project-report'  // htmlDependencyReport
-    id 'com.gorylenko.gradle-git-properties' version '2.2.4'
+    id 'com.gorylenko.gradle-git-properties' version '2.3.1'
 }
 
 // For actuator/info
@@ -27,11 +26,6 @@ gitProperties {
     customProperty 'git.build.artifact', { project.tasks.findByName('bootJar').getBaseName() }
     customProperty 'git.build.java-version', { System.getProperty('java.version') }
     customProperty 'git.build.time', { DateTimeFormatter.ofPattern(dateFormat).format(LocalDateTime.now()) }
-}
-
-// https://docs.freefair.io/gradle-plugins/current/reference/#_aspectj_plugins
-aspectj {
-    version = "1.9.6"
 }
 
 group 'com.playground'
@@ -50,26 +44,28 @@ bootRun {
     jvmArgs = ['--enable-preview']
 }
 
+springBoot {
+    mainClass.set('spring.Application')
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:3.0.6'
+    implementation 'org.codehaus.groovy:groovy-all:3.0.8'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'org.reflections:reflections:0.9.12'
 
-    implementation "org.springframework:spring-core:$springVersion"
     implementation "org.springframework:spring-webmvc:$springVersion"
-    implementation "org.springframework.boot:spring-boot:$springBootVersion"
-    implementation "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
+    implementation "org.springframework.boot:spring-boot-starter-aop:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-devtools:$springBootVersion"
 
-    compileOnly 'org.projectlombok:lombok:1.18.12'
-    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     testImplementation "org.spockframework:spock-core:$spockVersion"
     testImplementation "org.spockframework:spock-spring:$spockVersion"
