--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-springVersion = 5.2.12.RELEASE
-springBootVersion = 2.3.8.RELEASE
-spockVersion = 2.0-M4-groovy-3.0
+springVersion = 5.3.6
+springBootVersion = 2.4.5
+spockVersion = 2.0-M5-groovy-3.0
