--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
+message="Hello from application properties!"
+
 management.endpoints.web.exposure.include=*
 management.info.git.mode=full
 
 spring.groovy.template.check-template-location=false
-message="Hello from application properties!"
-#foo=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+
+# https://stackoverflow.com/a/48222934
+spring.jpa.open-in-view=false
+
+# Suppress INFO msg: "The Class-Path manifest attribute referenced one or more files that do not exist"
+logging.level.org.springframework.boot.devtools.restart.ChangeableUrls=WARN
+# Suppress INFO msg: "bean is not eligible for getting processed by all BeanPostProcessors"
+logging.level.org.springframework.context.support.[PostProcessorRegistrationDelegate$BeanPostProcessorChecker]=WARN
