Add H2 in-memory DB for testing.

--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     testImplementation "org.spockframework:spock-core:$spockVersion"
     testImplementation "org.spockframework:spock-spring:$spockVersion"
     testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
+    testImplementation 'com.h2database:h2:1.4.200'
 }
 
 test {
