--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# https://stackoverflow.com/a/57388375
+# suppress inspection "UnusedProperty" for whole file
+
 message="Hello from application properties!"
 
 management.endpoints.web.exposure.include=*
