--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 
 message="Hello from application properties!"
 
+management.endpoint.shutdown.enabled=true
 management.endpoints.web.exposure.include=*
 management.info.git.mode=full
 
