--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ management.info.git.mode=full
 
 spring.groovy.template.check-template-location=false
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.jpa.database=POSTGRESQL
+
+# http://h2database.com/html/features.html#compatibility
+spring.datasource.url=jdbc:h2:mem:playground;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
 spring.datasource.username=postgres
 
 # https://stackoverflow.com/a/48222934
