--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -1,2 +1,7 @@
+# suppress inspection "UnusedProperty" for whole file
+
 message="Local properties"
 foo=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
