Introduce Spring Cloud Feign with support for custom header annotations.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.jpa.open-in-view=false
 logging.level.org.springframework.boot.devtools.restart.ChangeableUrls=WARN
 # Suppress INFO msg: "bean is not eligible for getting processed by all BeanPostProcessors"
 logging.level.org.springframework.context.support.[PostProcessorRegistrationDelegate$BeanPostProcessorChecker]=WARN
+
+feign.header.key=Accept
+feign.header.value=application/json
