--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-devtools:$springBootVersion"
+    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:$springCloudVersion"
 
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
