--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,6 @@ logging.level.org.springframework.boot.devtools.restart.ChangeableUrls=WARN
 # Suppress INFO msg: "bean is not eligible for getting processed by all BeanPostProcessors"
 logging.level.org.springframework.context.support.[PostProcessorRegistrationDelegate$BeanPostProcessorChecker]=WARN
 
+http.status.url=https://httpstat.us/
 feign.header.key=Accept
 feign.header.value=application/json
