--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 import org.springframework.boot.gradle.tasks.run.BootRun
+import playground.plugin.bytebuddy.ImmutableEntityPlugin
 
 import java.time.ZonedDateTime
 import java.time.format.DateTimeFormatter
@@ -19,6 +20,7 @@ plugins {
     id 'project-report'  // htmlDependencyReport
     id 'com.gorylenko.gradle-git-properties' version '2.3.1'
     id 'com.google.cloud.tools.jib' version '3.0.0'  // jibDockerBuild
+    id 'net.bytebuddy.byte-buddy-gradle-plugin' version '1.11.15'
 }
 
 group 'com.playground'
@@ -26,6 +28,12 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 16
 targetCompatibility = 16
+
+byteBuddy {
+    transformation {
+        plugin = ImmutableEntityPlugin.class
+    }
+}
 
 jib {
     from.image = 'adoptopenjdk:16-jre'
