Example @Embedded @Entity. Enable H2 Web Console.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.database=POSTGRESQL
 # http://h2database.com/html/features.html#compatibility
 spring.datasource.url=jdbc:h2:mem:playground;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
 spring.datasource.username=postgres
+# http://localhost:8080/h2-console
+spring.h2.console.enabled=true
 
 # https://stackoverflow.com/a/48222934
 spring.jpa.open-in-view=false
