--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -5,3 +5,4 @@ foo=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
+spring.h2.console.enabled=false
