--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 }
 
 plugins {
+    id 'idea'  // Automatically downloads source jars.
     id 'groovy'
     id 'org.springframework.boot' version "$springBootVersion"
 //    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
@@ -106,6 +107,7 @@ dependencies {
     testImplementation "org.spockframework:spock-spring:$spockVersion"
     testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
     testImplementation 'com.github.tomakehurst:wiremock-jre8:2.29.1'
+    testImplementation 'io.github.http-builder-ng:http-builder-ng-core:1.0.4'
 }
 
 test {
