--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.1.2'
     implementation 'org.reflections:reflections:0.9.12'
 
     implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
