--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ logging.level.org.springframework.context.support.[PostProcessorRegistrationDele
 http.status.url=https://httpstat.us/
 feign.header.key=Accept
 feign.header.value=application/json
+
+springdoc.writer-with-order-by-keys=true
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
