--- a/build.gradle
+++ b/build.gradle
@@ -90,27 +90,33 @@ repositories {
 }
 
 dependencies {
+    // Groovy
     implementation 'org.codehaus.groovy:groovy-all:3.0.8'
+    // XML
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    // Commons
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'commons-io:commons-io:2.11.0'
+    // Misc
     implementation 'org.seleniumhq.selenium:selenium-java:4.1.2'
     implementation 'org.reflections:reflections:0.9.12'
-
+    // Spring
     implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-validation:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-devtools:$springBootVersion"
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign:$springCloudVersion"
-
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+    // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
-
+    // Database
     runtimeOnly 'org.postgresql:postgresql:42.2.20'
     runtimeOnly 'com.h2database:h2:1.4.200'
-
+    // Test
     testImplementation "org.spockframework:spock-core:$spockVersion"
     testImplementation "org.spockframework:spock-spring:$spockVersion"
     testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
