JPA retrieve lazy references

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ management.info.git.mode=full
 spring.groovy.template.check-template-location=false
 
 spring.jpa.database=POSTGRESQL
+spring.jpa.defer-datasource-initialization=true
 
 # http://h2database.com/html/features.html#compatibility
 spring.datasource.url=jdbc:h2:mem:playground;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
