--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-validation:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-devtools:$springBootVersion"
+    implementation "org.springframework.data:spring-data-envers:$springBootVersion"
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign:$springCloudVersion"
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
