--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,9 @@ feign.header.value=application/json
 springdoc.writer-with-order-by-keys=true
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
+
+spring.config.import=optional:aws-secretsmanager:playground
+aws.secretsmanager.endpoint=http://localhost:4566
+aws.secretsmanager.fail-fast=false
+playground.name=${secret-name:}
+playground.password=${secret-password:}
