--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,8 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'commons-io:commons-io:2.11.0'
     // Misc
-    implementation 'org.seleniumhq.selenium:selenium-java:4.1.2'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
+    implementation 'org.seleniumhq.selenium:selenium-http-jdk-client:4.5.0'
     implementation 'org.reflections:reflections:0.9.12'
     // Spring
     implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
