--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ dependencies {
     // Groovy
     implementation 'org.apache.groovy:groovy-all:4.0.13'
     // XML
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+    implementation 'com.fasterxml.jackson.module:jackson-module-mrbean:2.17.0'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     // Commons
     implementation 'org.apache.commons:commons-collections4:4.4'
