Scala call from Java code.

--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,13 @@ buildscript {
 plugins {
     id 'idea'  // Automatically downloads source jars but not Javadoc.
     id 'groovy'
+    id 'scala'
     id 'org.springframework.boot' version "$springBootVersion"
 //    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'project-report'  // htmlDependencyReport
-    id 'com.gorylenko.gradle-git-properties' version '2.3.1'
-    id 'com.google.cloud.tools.jib' version '3.0.0'  // jibDockerBuild
-    id 'net.bytebuddy.byte-buddy-gradle-plugin' version '1.11.15'
+    id 'com.gorylenko.gradle-git-properties' version '2.5.7'
+    id 'com.google.cloud.tools.jib' version '3.5.3'  // jibDockerBuild
+    id 'net.bytebuddy.byte-buddy-gradle-plugin' version '1.18.5'
 }
 
 idea {
@@ -30,12 +31,33 @@ idea {
     }
 }
 
-group 'com.playground'
-version '1.0-SNAPSHOT'
+group = 'com.playground'
+version = '1.0-SNAPSHOT'
 
 java {
     sourceCompatibility = 17
     targetCompatibility = 17
+}
+
+// https://docs.gradle.org/9.3.1/userguide/scala_plugin.html#sec:changing_scala_project_layout
+sourceSets {
+    main {
+        scala {
+            srcDirs += ['scala2/src/main/scala/com/external']
+        }
+    }
+}
+
+// https://docs.gradle.org/9.3.1/userguide/building_java_projects.html#sec:building_jvm_lang
+tasks.named('compileScala') {
+    // Scala only needs the declared dependencies
+    // (and not the output of compileJava)
+    classpath = sourceSets.main.compileClasspath
+}
+tasks.named('compileJava') {
+    // Java depends on the result of Scala compilation
+    // (which automatically makes it depend on compileScala)
+    classpath += files(sourceSets.main.scala.classesDirectory)
 }
 
 byteBuddy {
@@ -92,6 +114,8 @@ repositories {
 }
 
 dependencies {
+    // Scala
+    implementation("org.scala-lang:scala-library:2.12.21")
     // Groovy
     implementation 'org.apache.groovy:groovy-all:4.0.13'
     // XML
