Fix Spring Plugin version for Gradle 9.

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springPluginVersion")
     }
 }
 
@@ -17,7 +17,7 @@ plugins {
     id 'idea'  // Automatically downloads source jars but not Javadoc.
     id 'groovy'
     id 'scala'
-    id 'org.springframework.boot' version "$springBootVersion"
+    id 'org.springframework.boot' version "$springPluginVersion"
 //    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'project-report'  // htmlDependencyReport
     id 'com.gorylenko.gradle-git-properties' version '2.5.7'
@@ -40,13 +40,7 @@ java {
 }
 
 // https://docs.gradle.org/9.3.1/userguide/scala_plugin.html#sec:changing_scala_project_layout
-sourceSets {
-    main {
-        scala {
-            srcDirs += ['scala2/src/main/scala/com/external']
-        }
-    }
-}
+sourceSets.main.scala.srcDirs += ['scala2/src/main/scala/com/external']
 
 // https://docs.gradle.org/9.3.1/userguide/building_java_projects.html#sec:building_jvm_lang
 tasks.named('compileScala') {
@@ -104,7 +98,7 @@ tasks.register('bootRunLocal', BootRun) {
     it.group = 'Application'
     it.description = /Equivalent to gradle bootRun --args='--spring.profiles.active=local'/
     it.dependsOn = [bootJar]
-    it.mainClass.set(bootJar.mainClass)
+    it.mainClass = bootJar.mainClass
     it.classpath = sourceSets.main.runtimeClasspath
     it.args = ['--spring.profiles.active=local']
 }
