--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ management.endpoint.shutdown.enabled=true
 management.endpoints.web.exposure.include=*
 management.info.git.mode=full
 
+spring.output.ansi.enabled=ALWAYS
 spring.groovy.template.check-template-location=false
 
 spring.jpa.database=POSTGRESQL
